tests/ui/derive_pretty_printable_misplaced_attr.rs
use hegel::PrettyPrintable;

#[derive(PrettyPrintable)]
#[pretty(debug)]
struct Config {
    name: String,
}

fn main() {}
